--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -42,5 +42,5 @@ messages:
   chest-sorted: "§a✨ Chest magically sorted!"
   inventory-sorted: "§a✨ Inventory organized with wizard magic!"
   hotbar-sorted: "§6✨ Hotbar arranged by wizardry!"
-  all-sorted: "§b🧙‍♂️ Complete inventory enchanted by the InventoryWizard!"
-  no-permission: "§c🧙‍♂️ You lack the magical permission for this spell!"
+  all-sorted: "§b🧙✨ Complete inventory enchanted by the InventoryWizard!"
+  no-permission: "§c🧙✨ You lack the magical permission for this spell!"
